--- a/src/saar_website/templates/saar_website/email_template_review.html
+++ b/src/saar_website/templates/saar_website/email_template_review.html
@@ -216,19 +216,23 @@
                     SAAR ASSURANCES
                     <span class="flag-icon">🇨🇮</span>
                 </div>
-                <div class="company-tagline">Un réservoir de sécurité</div>
+                <div class="company-tagline">Préocupation Client</div>
             </div>
-        </div>
+        </div>    
+
         
         <!-- Contenu principal -->
         <div class="content">
             <div class="greeting">
-                Salut Madame, Monsieur <strong>{{name}}</strong>,
+                 <ul>
+                    <li><strong>Nom Complet :</strong> {{name}}</li>                
+                    <li><strong>Adresse Email :</strong> {{from_email}}</li>
+                 </ul>
             </div>
             
             <div class="message-box">
                 <div class="message-content">
-                    {{message_user}}
+                   {{message}}
                 </div>
             </div>
             
