--- a/src/saar_website/templates/saar_website/valeurs.html
+++ b/src/saar_website/templates/saar_website/valeurs.html
@@ -19,7 +19,7 @@
 
    
     <!-- Contact Start -->
-    <div class="container-fluid contact py-5">
+    <div class="container-fluid py-5">
         <div class="container py-2">
             {% comment %} <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                 <h5 class="section-title px-3">Contactez Nous</h5>
