--- a/src/saar_website/templates/saar_website/layouts/base.html
+++ b/src/saar_website/templates/saar_website/layouts/base.html
@@ -39,6 +39,8 @@
 
         <!-- Template Stylesheet -->
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
+        <link href="{% static 'css/style_produit.css' %}" rel="stylesheet">
+
 
         
     </head>
@@ -46,11 +48,11 @@
     <body>
 
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
-        </div>
+        </div> 
         <!-- Spinner End -->
 
 
@@ -370,6 +372,7 @@ document.addEventListener("DOMContentLoaded", function() {
   
           <!-- Template Javascript -->
           <script src="{% static 'js/main.js' %}"></script>
+          <script src="{% static 'js/main_produit.js' %}"></script>
 
       </body>
   
