--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -23,16 +23,10 @@
                     <div class="col-md-8 col-lg-8 col-xl-4">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Nos produits</h4>
-                            <a href="{% url 'produit' numero=products_keys.0 %}"><i class="fas fa-angle-right me-2"></i> Assurance Automobile</a>
-                            <a href="{% url 'produit' numero=products_keys.1 %}"><i class="fas fa-angle-right me-2"></i> Assurance Santé </a>
-                            <a href="{% url 'produit' numero=products_keys.2 %}"><i class="fas fa-angle-right me-2"></i> Assurance Individuelle Accidents </a>
-                            <a href="{% url 'produit' numero=products_keys.3 %}"><i class="fas fa-angle-right me-2"></i> Assurance Voyage </a>
-                            <a href="{% url 'produit' numero=products_keys.4 %}"><i class="fas fa-angle-right me-2"></i> Assurance Habitation</a>
-                            <a href="{% url 'produit' numero=products_keys.9 %}"><i class="fas fa-angle-right me-2"></i> Assurance Loyers Impayés</a>
-                            <a href="{% url 'produit' numero=products_keys.5 %}"><i class="fas fa-angle-right me-2"></i> Assurance Transport </a>
-                            <a href="{% url 'produit' numero=products_keys.6 %}"><i class="fas fa-angle-right me-2"></i> Assurance Caution </a>
-                            <a href="{% url 'produit' numero=products_keys.8 %}"><i class="fas fa-angle-right me-2"></i> Assurance Takaful </a>
-                            <a href="{% url 'produit' numero=products_keys.7 %}"><i class="fas fa-angle-right me-2"></i> Risques Divers </a>
+
+                            {% for prod in produits %}
+                            <a href="{% url 'produit_detail' slug=prod.slug %}"><i class="fas fa-angle-right me-2"></i>{{prod.titre}}</a>
+                            {% endfor %}
                         </div>
                     </div>
 
@@ -44,7 +38,7 @@
                             {% comment %} <a href="#"><i class="fas fa-angle-right me-2"></i> Direction Générale</a> {% endcomment %}
                             <a href="{% url 'agences' %}"><i class="fas fa-angle-right me-2"></i> Nos Agences</a>
                             <a href="{% url 'valeurs' %}"><i class="fas fa-angle-right me-2"></i> Nos Valeurs </a>
-                            <a href="{% url 'reclamation' %}"><i class="fas fa-angle-right me-2"></i> Déclarer sinistre automobile </a>
+                            <a href="https://sinistres.saarassurancesci.com/"><i class="fas fa-angle-right me-2"></i> Déclarer un sinistre </a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Carrières</a>
                             {% comment %} <a href=""><i class="fas fa-angle-right me-2"></i> Magazine</a> {% endcomment %}
                         </div>
@@ -101,7 +95,7 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-8 text-center text-md-end mb-md-0">
-                        Copyright <i class="fas fa-copyright me-2"></i> 2024, <a class="text-white" href="#">Saar Côte d'Ivoire</a>, Tous droits réservés.
+                        Copyright <i class="fas fa-copyright me-2"></i> 2025, <a class="text-white" href="#">Saar Côte d'Ivoire</a>, Tous droits réservés.
                     </div>
                     {% comment %} <div class="col-md-6 text-center text-md-start">
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
