--- a/src/saar_website/templates/saar_website/produits/produit-1.html
+++ b/src/saar_website/templates/saar_website/produits/produit-1.html
@@ -8,11 +8,7 @@
      <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px;">
             <h3 class="text-white display-3 mb-4">{{produit.titre}}</h1>
-           <!--  <ol class="breadcrumb justify-content-center mb-0">
-                <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
-                {% comment %} <li class="breadcrumb-item"><a href="#">Pages</a></li> {% endcomment %} 
-                <li class="breadcrumb-item active text-white">{{produit.titre}}</li>
-            </ol>   --> 
+            <p class="text-light lead">Protection complète pour votre véhicule avec SAAR Assurances</p>
         </div>
     </div>
     <!-- Header End -->
